// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow handles high member count and moderator role 1`] = `
<View>
  <StarIcon />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text>
      Greater Place
    </Text>
  </TouchableOpacity>
  <Text>
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`CommunityRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text>
      Great Place
    </Text>
  </TouchableOpacity>
  <Text>
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberBio matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      About Me
    </Text>
  </View>
  <Control
    hideEditIcon={true}
    isMe={true}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Description"
    value="I live I die!"
  />
</View>
`;

exports[`MemberCommunities matches the last snapshot 1`] = `
<View>
  <Text>
    My Hylo Communities
  </Text>
  <CommunityRow
    membership={
      Object {
        "id": 1,
      }
    }
  />
  <CommunityRow
    membership={
      Object {
        "id": 2,
      }
    }
  />
  <CommunityRow
    membership={
      Object {
        "id": 3,
      }
    }
  />
</View>
`;

exports[`MemberDetails has navigation options 1`] = `
Object {
  "headerBackTitle": null,
  "headerStyle": Object {
    "backgroundColor": "white",
    "paddingHorizontal": 10,
  },
  "headerTintColor": "#808c9b",
  "headerTitle": "About This Member",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
  },
}
`;

exports[`MemberDetails matches the last snapshot 1`] = `<Loading />`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      My Skills
    </Text>
  </View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
  >
    <View>
      <Text>
        RUN
      </Text>
      <Text>
        ALL
      </Text>
      <Text>
        DAY
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
